# CPPGraphicsEngine

./: CMakeLists.txt  EngineAPI.h  GraphicsEngine.h  README.md  asset_demo.cpp  debug_render.cpp  main.cpp  material_demo.cpp  test_input.cpp  test_simple.cpp
Assets/Materials/: blue_emissive.mat  custom_hologram.mat  custom_toon.mat  gold.mat  green_plastic.mat  ground.mat  red_metal.mat  stone.mat
Assets/Scripts/: cameraController.h  rotator.h
Demos/: asset_demo.cpp  custom_material_demo.cpp  material_demo.cpp  model_test.cpp
Docs/: ARCHITECTURE.md  CLEANUP_SESSION.md  CLEANUP_SUMMARY.md  COMPONENT_GUIDE.md  COMPONENT_REFERENCE.md  FILE_AUDIT.md  GETTING_STARTED.md  MATERIAL_SYSTEM.md  PERFORMANCE_AND_FEATURES.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  RENDERING_GUIDE.md  RESTRUCTURE_SUMMARY.md  SHADER_GUIDE.md  UNITY_LIKE_ARCHITECTURE.md  UPDATED_QUICK_REFERENCE.md  WINDOW_RENDERING.md
Engine/Core/: gameEngine.h  gameObject.h  scene.h
Engine/Core/Components/: behaviour.h  cameraComponent.h  component.h  meshFilter.h  meshRenderer.h  monoBehaviour.h  transformComponent.h
Engine/Core/Systems/: input.h  sceneSerializer.h
Engine/Math/: mat4.h  vec2.h  vec3.h
Engine/Rendering/: builtin_materials.h  camera.h  color.h  framebuffer.h  light.h  material.h  opengl_renderer.h  opengl_window.h  rasterizer.h  texture.h
Engine/Rendering/Core/: framebuffer.h  opengl_renderer.h  opengl_window.h  rasterizer.h  render_command.h  render_types.h  uniform_buffer.h  window.h
Engine/Rendering/Loaders/: modelLoader.h  textureLoader.h
Engine/Rendering/Materials/: builtin_materials.h  material.h  materialSerializer.h
Engine/Rendering/Primitives/: mesh.h
Engine/Rendering/Shaders/: default_shaders.h  shader.h
